@@ -734,6 +734,17 @@
 			  </child>
 
 			  <child>
+			    <widget class="GtkRadioMenuItem" id="menu_item_display_engineering">
+			      <property name="visible">True</property>
+			      <property name="label" translatable="yes">Engineering</property>
+			      <property name="use_underline">True</property>
+			      <property name="active">False</property>
+			      <property name="group">menu_item_display_normal</property>
+			      <signal name="activate" handler="on_menu_item_display_engineering_activate" last_modification_time="Sat, 10 Jul 2006 21:41:06 GMT"/>
+			    </widget>
+			  </child>
+
+			  <child>
 			    <widget class="GtkRadioMenuItem" id="menu_item_display_scientific">
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">Scientific</property>
@@ -2148,6 +2159,7 @@
 				<widget class="GtkComboBox" id="combobox_numerical_display">
 				  <property name="visible">True</property>
 				  <property name="items" translatable="yes">Normal
+Engineering
 Scientific
 Pure
 Simple</property>
@@ -3531,6 +3543,17 @@ Other...</property>
       <property name="use_underline">True</property>
       <property name="active">True</property>
       <signal name="activate" handler="on_popup_menu_item_display_normal_activate" last_modification_time="Thu, 11 Mar 2004 08:37:06 GMT"/>
+    </widget>
+  </child>
+
+  <child>
+    <widget class="GtkRadioMenuItem" id="popup_menu_item_display_engineering">
+      <property name="visible">True</property>
+      <property name="label" translatable="yes">Engineering</property>
+      <property name="use_underline">True</property>
+      <property name="active">False</property>
+      <property name="group">popup_menu_item_display_normal</property>
+      <signal name="activate" handler="on_popup_menu_item_display_engineering_activate" last_modification_time="Sat, 10 Jul 2006 21:37:06 GMT"/>
     </widget>
   </child>
 
