@@ -1,3 +1,7 @@
+2006-06-10 Niklas Knutsson  <nq@altern.org>
+
+	* Add "Engineering" display mode
+
 2006-06-01 Niklas Knutsson  <nq@altern.org>
 
 	* Polishing before 0.9.4 release
